Changed calls to ArupExit.exitForm() on Appointment and Field of play to just close the form rather than trying to navigate backto an entity list.

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1328,8 +1328,8 @@
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_FOP_Main_Library.js">
-      <DisplayName>arup_FOP_Main_Library</DisplayName>
-      <UniqueName>new_arup_FOP_Main_Library</UniqueName>
+      <DisplayName>FOP_Main_Library</DisplayName>
+      <UniqueName>arup_FOP_Main_Library</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_projectparticipant_library.js">
