arup_Team_Main_Library - Removed unwanted code arup_activities_common_library -> Removed teh function which show hide the + sign on activitysubgrid. This is now done using generic funciton from library arup_hide_addnewrecord_subgrid

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1332,6 +1332,11 @@
       <UniqueName>ccrm_/JavaScripts/Lib/SDK.MetaData.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\arup_hide_addnewrecord_subgrid.js">
+      <DisplayName>arup_hide_addnewrecord_subgrid</DisplayName>
+      <UniqueName>new_arup_hide_addnewrecord_subgrid</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\All Other Entities\arup_alert.js">
       <DisplayName>Alert library</DisplayName>
       <UniqueName>arup_alerts.js</UniqueName>
