--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1332,6 +1332,11 @@
       <UniqueName>ccrm_/JavaScripts/Lib/SDK.MetaData.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\arup_hide_addnewrecord_subgrid.js">
+      <DisplayName>arup_hide_addnewrecord_subgrid</DisplayName>
+      <UniqueName>new_arup_hide_addnewrecord_subgrid</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Contact\arup_contactRejectionReason.htm">
       <DisplayName>arup_contactRejectionReason</DisplayName>
       <UniqueName>new_arup_contactRejectionReason</UniqueName>
