--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1337,6 +1337,11 @@
       <UniqueName>new_SystemUser_main_library</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\arup_FrameworkButtonCommand.js">
+      <DisplayName>arup_FrameworkButtonCommand</DisplayName>
+      <UniqueName>new_arup_FrameworkButtonCommand</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Contact\arup_contactRejectionReason.htm">
       <DisplayName>arup_contactRejectionReason</DisplayName>
       <UniqueName>arup_contactRejectionReason</UniqueName>
@@ -1865,6 +1870,11 @@
     <CRMWebResource Include="WebResources\Web Page %28HTML%29\arup_DuplicateCheckMoreResults.htm">
       <DisplayName>arup_DuplicateCheckMoreResults</DisplayName>
       <UniqueName>arup_arup_DuplicateCheckMoreResults</UniqueName>
+      <WebResourceType>WebPage</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Web Page %28HTML%29\arup_FrameworkButtons.htm">
+      <DisplayName>arup_FrameworkButtons</DisplayName>
+      <UniqueName>new_arup_FrameworkButtons</UniqueName>
       <WebResourceType>WebPage</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Web Page (HTML)\arup_DuplicateCheckResult.html">
