--- a/MultiTagComponent/package.json
+++ b/MultiTagComponent/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^10.12.18",
     "@types/powerapps-component-framework": "^1.2.0",
+    "msbuild": "^1.1.3",
     "util": "^0.12.3"
   },
   "devDependencies": {
