Changes related to Qualification Tab

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1307,9 +1307,9 @@
       <UniqueName>arup_Contact</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_commonfunctions.js">
-      <DisplayName>arup_commonfunctions</DisplayName>
-      <UniqueName>new_arup_commonfunctions</UniqueName>
+    <CRMWebResource Include="WebResources\Script (JScript)\All Other Entities\arup_commonfunctions.js">
+      <DisplayName>arup_commonfunction</DisplayName>
+      <UniqueName>new_arup_commonfunction</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_DuplicateCheck.js">
