1. Framework Popup 2. HIde CRM Frameowrk Record exist field 3. msdyn_csp.html file is added .This file is used for CRM Support Portal navigation. Inital navigation was window.open("https://sharepoint.arup.com/communities/crmsp/SitePages/Home.aspx?sitemappath=HLP%7cGET_HELP%7cCRMSupportPortal", "_blank");

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1887,6 +1887,11 @@
       <UniqueName>arup_FrameworkButtons</UniqueName>
       <WebResourceType>WebPage</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Web Page %28HTML%29\msdyn_csp.html">
+      <DisplayName>msdyn_csp</DisplayName>
+      <UniqueName>new_msdyn_csp</UniqueName>
+      <WebResourceType>WebPage</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Web Page (HTML)\arup_DuplicateCheckResult.html">
       <DisplayName>arup_DuplicateCheckResult</DisplayName>
       <UniqueName>arup_arup_DuplicateCheckResult</UniqueName>
