--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1307,6 +1307,11 @@
       <UniqueName>arup_Contact</UniqueName>
       <WebResourceType>PNG</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\Opportunity\arup_opportunity_financialCalculations.js">
+      <DisplayName>arup_opportunity_financialCalculations.js</DisplayName>
+      <UniqueName>arup_opportunity_financialCalculations.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Opportunity\arup_opportunity_tags.js">
       <DisplayName>arup_opportunity_tags.js</DisplayName>
       <UniqueName>arup_opportunity_tags.js</UniqueName>
