--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1312,6 +1312,11 @@
       <UniqueName>arup_ie_warning.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\All Other Entities\arup_team_ribbon_library.js">
+      <DisplayName>arup_team_ribbon_library</DisplayName>
+      <UniqueName>arup_team_ribbon_library.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Opportunity\arup_opportunity_financialCalculations.js">
       <DisplayName>arup_opportunity_financialCalculations.js</DisplayName>
       <UniqueName>arup_opportunity_financialCalculations.js</UniqueName>
