--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1007,6 +1007,16 @@
       <UniqueName>arup_arup_mysubscription_icon_large</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\PNG format\arup_people16.png">
+      <DisplayName>arup_people16</DisplayName>
+      <UniqueName>arup_people16.png</UniqueName>
+      <WebResourceType>PNG</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\PNG format\arup_people32.png">
+      <DisplayName>arup_people32</DisplayName>
+      <UniqueName>arup_people32.png</UniqueName>
+      <WebResourceType>PNG</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\PNG format\arup_projectparticipants_32">
       <DisplayName>arup_projectparticipants_32</DisplayName>
       <UniqueName>arup_arup_projectparticipants_32</UniqueName>
@@ -2116,6 +2126,11 @@
       <Private>True</Private>
       <SilverlightApplication>False</SilverlightApplication>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="WebResources\PNG format\arup_people32.svg">
+      <SubType>Content</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!--<Import Project="$(MSBuildExtensionsPath32)\Microsoft\CRM\Microsoft.CrmDeveloperTools.12.targets" />-->
