Change spelling and update text on help button caption. Fix issue with the tooltip. Try to add support for "MICROSOFT DYNAMICS CRM WEB RESOURCES UPDATER" (not yet successful...)

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -2138,6 +2138,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="UploaderMapping.config">
+      <SubType>Content</SubType>
+    </Content>
     <Content Include="WebResources\PNG format\arup_people32.svg">
       <SubType>Content</SubType>
     </Content>
